--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.0",
+    "swiper": "^8.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
